syntax = "proto3";

package national_instruments.flex_logger.automation.protocols;

// Service interface for a server side test specification document.
service TestSpecificationDocument {
}
